# autocontrol

./: Cargo.toml  README.md
src/: lib.rs
src/control/: auto_control.rs  mod.rs
src/error/: result.rs
src/keyboard/: key.rs
src/platform/windows/: clipboard.rs  keyboard.rs  mod.rs  mouse.rs  screen.rs
